--- a/s3Slider Full/Example 2.html
+++ b/s3Slider Full/Example 2.html
@@ -3,59 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>s3Slider jQuery plugin</title>
-<!-- CSS -->
-<style type="text/css" media="screen">
-#slider1 {
-    width: 720px; /* important to be same as image width */
-    height: 300px; /* important to be same as image height */
-    position: relative; /* important */
-	overflow: hidden; /* important */
-}
-
-#slider1Content {
-    width: 720px; /* important to be same as image width or wider */
-    position: absolute;
-	top: 0;
-	margin-left: 0;
-}
-.slider1Image {
-    float: left;
-    position: relative;
-	display: none;
-}
-.slider1Image span {
-    position: absolute;
-	font: 10px/15px Arial, Helvetica, sans-serif;
-    padding: 10px 13px;
-    width: 694px;
-    background-color: #000;
-    filter: alpha(opacity=70);
-    -moz-opacity: 0.7;
-	-khtml-opacity: 0.7;
-    opacity: 0.7;
-    color: #fff;
-    display: none;
-}
-.clear {
-	clear: both;
-}
-.slider1Image span strong {
-    font-size: 14px;
-}
-.left {
-	top: 0;
-    left: 0;
-	width: 110px !important;
-	height: 280px;
-}
-.right {
-	right: 0;
-	bottom: 0;
-	width: 90px !important;
-	height: 290px;
-}
-ul { list-style-type: none;}
-</style>
+<link rel="stylesheet" href="cssSlider.css" type="text/css" media="all"/>
 <!-- JavaScripts-->
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
 <script type="text/javascript" src="s3Slider.js"></script>
@@ -75,10 +23,10 @@ ul { list-style-type: none;}
     <div id="slider1">
         <ul id="slider1Content">
             <li class="slider1Image">
-                <a href=""><img src="example_images/wide/1.jpg" alt="1" /></a>
+                <a href=""><img src="example_images/wide/gafas.jpg" alt="1" /></a>
                 <span class="left"><strong>Title text 1</strong><br />Content text...</span></li>
             <li class="slider1Image">
-                <a href=""><img src="example_images/wide/2.jpg" alt="2" /></a>
+                <a href=""><img src="example_images/wide/coche.jpg" alt="2" /></a>
                 <span class="right"><strong>Title text 2</strong><br />Content text...Content text...Content text...Content text...Content text...Content text...Content text...Content text...Content text...Content text...Content text...</span></li>
             <li class="slider1Image">
                 <img src="example_images/wide/3.jpg" alt="3" />
