--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<body>
 		<div id="articulos">
 			<header id="top_header">
-				<h1>Pintxopo Donosti</h1>				
+				<h1>PINTXOPOTE DONOSTI</h1>				
 			</header>
 
 			<nav id="top_menu">
@@ -53,17 +53,17 @@
 			<section id="fotos_section">
 				<article>
 					<header>
-						<figure/>
+						<img src="images/food1.png"/>
 					</header>
 				</article>
 				<article>
 					<header>
-						<figure/>
+						<img src="images/Selection_001.png"/>
 					</header>
 				</article>
 				<article>
 					<header>
-						<figure/>
+						<img src="images/bar.jpg"/>
 					</header>
 				</article>
 			</section>
