--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<ul>
 					<li>Rutas</li>
 					<li>Bares</li>
-					<li>Pintxos</li>
+					<li><a href="kkpintxos.html">Pintxos</a></li>
 					<li>Calendario</li>
 					<li>About us</li>					
 				</ul>
