--- a/public/index.html
+++ b/public/index.html
@@ -18,20 +18,27 @@
 	</head>
 	<body>
 		<div id="articulos">
+			
 			<header id="top_header">
+				<div id="logo">
+				<img src="images/logo_pintxopo_malo.png" width="150px" height="150px" alt="The Pintxopo">
+				</div>
 				<h1>PINTXOPOTE DONOSTI</h1>				
 			</header>
-
 			<nav id="top_menu">
 				<ul>
-					<li>Rutas</li>
-					<li>Bares</li>
-					<li><a href="/pintxokk">Pintxos</a></li>
-					<li><a href="/pintxokek">Calendario</a></li>
-					<li>About us</li>					
+					<li>RUTAS</li>
+					<li>BARES</li>
+					<li><a href="/pintxokk">PINTXOS</a></li>
 				</ul>
 			</nav>
-
+			<nav id="top_menu2">
+				<ul>	
+					<li><a href="/pintxokek">CALENDARIO</a></li>
+					<li>KAKAFUTI</li>
+					<li>ABOUT US</li>
+				</ul>
+			</nav>
 			<section id="main_section">
 			
 		    <div id="slider1">
