mas cosas nuevas

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,9 @@
 
 		<meta charset="utf-8"/>
 
-		<link rel="stylesheet" href="main.css" />		
+		<link rel="stylesheet" href="main.css" />	
+		<link href='http://fonts.googleapis.com/css?family=Lora|PT+Sans+Narrow|Old+Standard+TT:400italic|Pinyon+Script|Open+Sans+Condensed:300|Merriweather' rel='stylesheet' type='text/css'>	
+
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
 
 	</head>
@@ -51,7 +53,7 @@
 
 		<div class="mainSection">
 			<div class="bienvenida">
-				<h2>KAKOTA</h2>
+				<h2>Lorem ipsum sit amet</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 			</div>
 			
