--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 		<link href='http://fonts.googleapis.com/css?family=Lora|PT+Sans+Narrow|Old+Standard+TT:400italic|Pinyon+Script|Open+Sans+Condensed:300|Merriweather' rel='stylesheet' type='text/css'>
 
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
-		<script type="text/javascript" href="/home/artzai/Documents/proyecto-pintxopote/app.js"></script>
+		<script type="text/javascript" href="../app.js"></script>
 		<script type="text/javascript" src="js/pintxos.js"></script>
 		
 
